tests/fixtures/invalid/none_add_int.py
# Cannot add None and Int
x: None = None + 1
